--- a/เว็ปฝั่งพนักงาน.html
+++ b/เว็ปฝั่งพนักงาน.html
@@ -99,5 +99,6 @@
     // แชร์สถานะทั้งหมดกับฝั่งลูกค้า
     window.getCarStatuses = () => carStatuses;
   </script>
+  <a href="customer.html" target="_blank">ดูสถานะของลูกค้า</a>
 </body>
 </html>
