--- a/เว็ปฝั่งพนักงาน.html
+++ b/เว็ปฝั่งพนักงาน.html
@@ -3,23 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ระบบจัดการสถานะรถ (จำกัด 10 ทะเบียน)</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    label, input, select, button {
-      display: block;
-      margin-bottom: 10px;
-    }
-    .warning {
-      color: red;
-    }
-  </style>
+  <title>ระบบจัดการสถานะรถ</title>
 </head>
 <body>
-  <h1>จัดการสถานะรถ (สูงสุด 10 ทะเบียน)</h1>
+  <h1>จัดการสถานะรถ</h1>
   <form id="updateStatusForm">
     <label for="plateNumber">หมายเลขทะเบียนรถ:</label>
     <input type="text" id="plateNumber" required>
@@ -39,66 +26,7 @@
   
   <p id="resultMessage" class="warning"></p>
 
-  <script>
-    const carStatuses = []; // เก็บข้อมูลรถ (สูงสุด 10 คัน)
-
-    // ป้องกันการ reload เมื่อกด Enter
-    document.getElementById('updateStatusForm').addEventListener('submit', function(event) {
-      event.preventDefault(); // ป้องกันพฤติกรรมเริ่มต้นของฟอร์ม
-    });
-
-    function updateStatus() {
-      const plateNumber = document.getElementById('plateNumber').value.trim();
-      const status = document.getElementById('status').value;
-
-      if (!plateNumber) {
-        document.getElementById('resultMessage').innerText = 'กรุณากรอกหมายเลขทะเบียนรถ';
-        return;
-      }
-
-      // ตรวจสอบว่าทะเบียนรถนี้มีอยู่แล้วหรือไม่
-      const existingCarIndex = carStatuses.findIndex(car => car.plateNumber === plateNumber);
-
-      if (existingCarIndex !== -1) {
-        // หากมีอยู่แล้ว ให้อัปเดตสถานะ
-        carStatuses[existingCarIndex].status = status;
-        document.getElementById('resultMessage').innerText = `อัปเดตสถานะของรถทะเบียน ${plateNumber} เป็น "${status}" แล้ว`;
-      } else {
-        // หากยังไม่มี ให้เพิ่มเข้าไปในรายการ
-        if (carStatuses.length < 10) {
-          carStatuses.push({ plateNumber, status });
-          document.getElementById('resultMessage').innerText = `เพิ่มรถทะเบียน ${plateNumber} และตั้งสถานะเป็น "${status}" แล้ว`;
-        } else {
-          // หากมีครบ 10 คันแล้ว
-          document.getElementById('resultMessage').innerText = 'ไม่สามารถเพิ่มได้ เกินจำนวนที่กำหนด (สูงสุด 10 ทะเบียนรถ)';
-        }
-      }
-
-      renderCarList(); // อัปเดตรายการในหน้าจอ
-      document.getElementById('updateStatusForm').reset();
-    }
-
-    function deleteCar(index) {
-      const removedCar = carStatuses.splice(index, 1); // ลบทะเบียนรถจากรายการ
-      document.getElementById('resultMessage').innerText = `ลบทะเบียนรถ ${removedCar[0].plateNumber} ออกจากระบบแล้ว`;
-      renderCarList(); // อัปเดตรายการในหน้าจอ
-    }
-
-    function renderCarList() {
-      const carList = document.getElementById('carList');
-      carList.innerHTML = ''; // ล้างรายการเดิมก่อนแสดงรายการใหม่
-
-      carStatuses.forEach((car, index) => {
-        const li = document.createElement('li');
-        li.innerHTML = `${car.plateNumber} - สถานะ: ${car.status} 
-          <button onclick="deleteCar(${index})">ลบ</button>`;
-        carList.appendChild(li);
-      });
-    }
-
-    // แชร์สถานะทั้งหมดกับฝั่งลูกค้า
-    window.getCarStatuses = () => carStatuses;
-  </script>
-  <a href="customer.html" target="_blank">ดูสถานะของลูกค้า</a>
+  <!-- ลิงก์ไปหน้าลูกค้า -->
+  <a href="customer.html" target="_blank" style="display: block; margin-top: 20px; text-decoration: none; color: blue;">ดูสถานะของลูกค้า</a>
 </body>
 </html>
